Add TODO comments

--- a/app/views/expenses/overview.html.erb
+++ b/app/views/expenses/overview.html.erb
@@ -1,3 +1,5 @@
+<!-- TODO: Add links (e.g. 'View all charts').
+  This will mainly be for mobile users. -->
 <%= render :partial => 'graphs/pie_chart' %>
 <%= render :partial => 'expenses_table'%>
 
