--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,3 +1,4 @@
+<!-- TODO: Populate sidebar -->
 <%= stylesheet_link_tag 'sidebar', media: 'all', 'data-turbolinks-track' => true %>
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
